# must-triage

./: .gitignore  .mailmap  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml
must_triage/: cmd.py  formatters.py  fs.py  progress.py
must_triage/inspectors/: .ocp.py.swp  __init__.py  base.py  ocp.py  ocs.py
tests/: test_cmd.py  test_formatters.py  test_fs.py  test_progress.py
tests/inspectors/: test_base.py  test_init.py  test_ocp.py  test_ocs.py
