[metadata]
name = must_triage
author = Zack Cerza
author-email = zack@redhat.com
summary = A utility for triaging must-gather output
long_description = file: README.md, LICENSE
keywords = python, openshift, ocp, kubernetes, k8s, ceph, ocs
license = GPLv3
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    must-triage = must_triage.cmd:main

