[metadata]
name = must_triage
author = Zack Cerza
author-email = zack@redhat.com
summary = A utility for triaging must-gather output
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
keywords = python, openshift, ceph
license = GPLv3
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[entry_points]
console_scripts =
    must-triage = must_triage.cmd:main

